--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS_portfolio.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5a950ab5b6.js" crossorigin="anonymous"></script>
 </head>
 
