--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="content">
             <h4> HELLO, MY <b> NAME</b> IS </h4>
             <h1> Aamir<b> Khan</b> </h1>
-            <h6> I'm Cloud-<b>Engineer.</b></h6>
+            <h6> I'm Cloud with DevOps<b>Engineer.</b></h6>
             <h5 id="content_h5"> Creative Of<b> Infra's </b></h5>
             <p> If You <b> Are Interested.</b></p>
             <div class="input">
